# whatsapp-rs

./: .releaserc  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release.yml
